--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -265,67 +265,64 @@
                 <ul>
                     <li><strong>Loan Amount:</strong> The larger the amount borrowed (home price minus down payment), the higher the payment.</li>
                     <li><strong>Interest Rate:</strong> A higher interest rate means a higher borrowing cost and thus a higher monthly payment.</li>
-                    <li><strong>Loan Term:</strong> Shorter terms (e.g., 15 years) have higher monthly payments but lower total interest paid compared to longer terms (e.g., 30 years).</li>
-                    <li><strong>Down Payment:</strong> A larger down payment reduces the loan amount and can help you avoid PMI, lowering your monthly payment.</li>
-                    <li><strong>Property Taxes:</strong> These vary significantly by location and property value.</li>
-                    <li><strong>Homeowners Insurance:</strong> Costs depend on location, home value, coverage levels, and other risk factors.</li>
-                    <li><strong>PMI:</strong> If required (typically for down payments < 20%), this adds to your monthly cost.</li>
-                    <li><strong>HOA Fees:</strong> If applicable, these are added to your monthly housing expense.</li>
+                    <li><strong>Loan Term:</strong> Shorter loan terms (e.g., 15 years) have higher monthly payments but lower total interest costs compared to longer terms (e.g., 30 years).</li>
+                    <li><strong>Down Payment:</strong> A larger down payment reduces the loan amount, lowering the monthly payment and potentially avoiding PMI.</li>
+                    <li><strong>Property Taxes and Insurance:</strong> These costs vary by location and home value and are included in the escrow portion of your payment.</li>
+                    <li><strong>PMI:</strong> If required, PMI adds to your monthly cost until sufficient equity is built.</li>
+                    <li><strong>HOA Fees:</strong> If applicable, these are added to your total monthly housing expense.</li>
                 </ul>
 
                 <h2>Benefits of Extra Payments</h2>
-                <p>Making extra payments toward your mortgage principal can significantly reduce your loan term and save you thousands, potentially tens of thousands, in interest over the life of the loan. Even small additional monthly payments can make a big difference. Use the "Extra Monthly Payment" field in the calculator to see the potential impact on your loan payoff date and total interest savings.</p>
+                <p>Making additional payments towards your mortgage principal, even small amounts, can yield significant benefits:</p>
+                <ul>
+                    <li><strong>Pay Off Loan Faster:</strong> Extra payments shorten the loan term, allowing you to become mortgage-free sooner.</li>
+                    <li><strong>Save on Interest:</strong> By reducing the principal balance faster, you pay less interest over the life of the loan.</li>
+                    <li><strong>Build Equity Quicker:</strong> Increased principal payments accelerate the growth of your home equity.</li>
+                </ul>
+                <p>Use the "Extra Monthly Payment" field in the calculator to explore how different extra payment amounts impact your loan payoff timeline and total interest savings.</p>
 
-            </section>
-
-            <!-- FAQ Section -->
-            <section class="faq-section">
                 <h2>Frequently Asked Questions</h2>
-                
-                <details>
-                    <summary>What is included in a mortgage payment?</summary>
-                    <div class="faq-answer">
-                        <p>A typical mortgage payment includes four components: Principal (the amount borrowed), Interest (the cost of borrowing), Taxes (property taxes), and Insurance (homeowners insurance and possibly PMI). These four components are often referred to as PITI. Some mortgage payments may also include homeowners association (HOA) fees if applicable.</p>
+                <div class="faq-accordion">
+                    <div class="faq-item">
+                        <button class="faq-question" aria-expanded="false">What is included in a mortgage payment? <span class="faq-icon">+</span></button>
+                        <div class="faq-answer" aria-hidden="true">
+                            <p>A typical mortgage payment includes four components: Principal (the amount borrowed), Interest (the cost of borrowing), Taxes (property taxes), and Insurance (homeowners insurance and potentially PMI). This is often abbreviated as PITI. Some payments may also include HOA fees.</p>
+                        </div>
                     </div>
-                </details>
-
-                <details>
-                    <summary>How accurate is this mortgage calculator?</summary>
-                    <div class="faq-answer">
-                        <p>This calculator provides a good estimate of your monthly mortgage payment based on the information you provide. However, actual payments may vary slightly due to factors such as the exact day of the month your payment is due, rounding differences by the lender, or future changes in property tax assessments or insurance premiums. For the most accurate payment information, consult directly with your mortgage lender.</p>
+                    <div class="faq-item">
+                        <button class="faq-question" aria-expanded="false">How accurate is this mortgage calculator? <span class="faq-icon">+</span></button>
+                        <div class="faq-answer" aria-hidden="true">
+                            <p>This calculator provides a good estimate of your monthly mortgage payment based on the information you provide. However, actual payments can vary slightly due to factors like fluctuating insurance premiums, changes in property taxes, or specific lender fees. It's best used for planning and comparison purposes.</p>
+                        </div>
                     </div>
-                </details>
-
-                <details>
-                    <summary>What is PMI and when is it required?</summary>
-                    <div class="faq-answer">
-                        <p>Private Mortgage Insurance (PMI) is insurance that protects the lender if you default on your loan. It's typically required for conventional loans when your down payment is less than 20% of the home's purchase price. PMI usually costs between 0.5% and 1% (or sometimes more) of the original loan amount annually and is added to your monthly mortgage payment. Once your loan balance drops to 80% of the original home value (or sometimes 78% automatically), you can typically request to have PMI removed, or it may be automatically terminated.</p>
+                    <div class="faq-item">
+                        <button class="faq-question" aria-expanded="false">What is PMI and when is it required? <span class="faq-icon">+</span></button>
+                        <div class="faq-answer" aria-hidden="true">
+                            <p>Private Mortgage Insurance (PMI) is insurance that protects the lender if you default on your loan. It's typically required for conventional loans when your down payment is less than 20% of the home's purchase price. PMI usually costs between 0.5% and 1% (or sometimes more) of the original loan amount annually and is added to your monthly mortgage payment. Once your loan balance drops to 80% of the original home value (or sometimes 78% automatically), you can typically request to have PMI removed, or it may be automatically terminated.</p>
+                        </div>
                     </div>
-                </details>
-
-                <details>
-                    <summary>How can I lower my monthly mortgage payment?</summary>
-                    <div class="faq-answer">
-                        <p>There are several ways to potentially lower your monthly mortgage payment:</p>
-                        <ul>
-                            <li>Make a larger down payment to reduce the initial loan amount.</li>
-                            <li>Choose a longer loan term (e.g., 30 years instead of 15), although this increases the total interest paid over time.</li>
-                            <li>Shop around for a loan with a lower interest rate (improving your credit score can help).</li>
-                            <li>Appeal your property tax assessment if you believe it's too high.</li>
-                            <li>Shop around for cheaper homeowners insurance policies that still provide adequate coverage.</li>
-                            <li>Refinance your mortgage to a lower interest rate if market rates have dropped significantly since you obtained your loan.</li>
-                            <li>Once you reach 20% equity, ensure PMI is removed if applicable.</li>
-                        </ul>
+                    <div class="faq-item">
+                        <button class="faq-question" aria-expanded="false">How can I lower my monthly mortgage payment? <span class="faq-icon">+</span></button>
+                        <div class="faq-answer" aria-hidden="true">
+                            <p>There are several ways to potentially lower your monthly mortgage payment:</p>
+                            <ul>
+                                <li>Make a larger down payment to reduce the initial loan amount.</li>
+                                <li>Choose a longer loan term (e.g., 30 years instead of 15), although this increases the total interest paid over time.</li>
+                                <li>Shop around for a loan with a lower interest rate (improving your credit score can help).</li>
+                                <li>Appeal your property tax assessment if you believe it's too high.</li>
+                                <li>Shop around for cheaper homeowners insurance policies that still provide adequate coverage.</li>
+                                <li>Refinance your mortgage to a lower interest rate if market rates have dropped significantly since you obtained your loan.</li>
+                                <li>Once you reach 20% equity, ensure PMI is removed if applicable.</li>
+                            </ul>
+                        </div>
                     </div>
-                </details>
-
-                <details>
-                    <summary>What happens if I make extra payments toward my mortgage?</summary>
-                    <div class="faq-answer">
-                        <p>Making extra payments directly toward your mortgage principal helps you build equity faster, pay off your loan sooner, and save a significant amount on total interest costs. Ensure your extra payments are specifically designated for the principal balance. Even small additional amounts can make a big difference over the life of the loan. Use the "Extra Monthly Payment" field in our calculator to see the potential impact.</p>
+                    <div class="faq-item">
+                        <button class="faq-question" aria-expanded="false">What happens if I make extra payments toward my mortgage? <span class="faq-icon">+</span></button>
+                        <div class="faq-answer" aria-hidden="true">
+                            <p>Making extra payments directly toward your mortgage principal helps you build equity faster, pay off your loan sooner, and save a significant amount on total interest costs. Ensure your extra payments are specifically designated for the principal balance. Even small additional amounts can make a big difference over the life of the loan. Use the "Extra Monthly Payment" field in our calculator to see the potential impact.</p>
+                        </div>
                     </div>
-                </details>
-
+                </div>
             </section>
             
         </div>
@@ -372,6 +369,7 @@
         </div>
     </footer>
 
+    <script src="/js/faq-accordion.js" defer></script>
 </body>
 </html>
 
