--- a/math/percentage/index.html
+++ b/math/percentage/index.html
@@ -1,1 +1,252 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Percentage Calculators - CalcHub</title>
+    <meta name="description" content="Free online percentage calculators for various needs, including percentage of a number, percentage change, markup, discount, and more. Easy to use with clear explanations.">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/dark-mode.css">
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
+    <link rel="stylesheet" href="/css/navigation-ribbon.css">
+    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-R1QHNSSWTC");
+    </script>
+    <!-- End Google Analytics -->
+
+    <!-- Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.freecalchub.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Math",
+          "item": "https://www.freecalchub.com/math/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Percentages",
+          "item": "https://www.freecalchub.com/math/percentages/"
+        }
+      ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Percentage Calculator",
+          "url": "https://www.freecalchub.com/math/percentages/percentage-calculator/"
+        }
+        /* Add other percentage calculators here as they are created */
+      ]
+    }
+    </script>
+</head>
+<body>
+    <a href="#main-content" class="skip-link">Skip to content</a>
+    <header>
+        <div class="header-container">
+            <div class="logo-container">
+                <a href="../../" class="logo">
+                    <img src="/images/logo.svg" alt="CalcHub Logo" height="40">
+                </a>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="../../finance/">Finance</a></li>
+                    <li><a href="../../math/" class="active">Math</a></li>
+                    <li><a href="../../health/">Health</a></li>
+                    <li><a href="../../conversions/">Conversions</a></li>
+                    <li><a href="../../date-time/">Date & Time</a></li>
+                    <li><a href="../../business/">Business</a></li>
+                    <li><a href="../../lifestyle/">Lifestyle</a></li>
+                    <li><a href="../../blog/">Blog</a></li>
+                </ul>
+            </nav>
+            <div class="header-controls">
+                <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                </button>
+                <button id="mobile-menu-button" aria-label="Open menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <div id="mobile-menu" class="mobile-menu">
+        <div class="mobile-menu-header">
+            <span>Menu</span>
+            <button id="mobile-menu-close" aria-label="Close menu">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="../../finance/">Finance</a></li>
+                <li><a href="../../math/" class="active">Math</a></li>
+                <li><a href="../../health/">Health</a></li>
+                <li><a href="../../conversions/">Conversions</a></li>
+                <li><a href="../../date-time/">Date & Time</a></li>
+                <li><a href="../../business/">Business</a></li>
+                <li><a href="../../lifestyle/">Lifestyle</a></li>
+                <li><a href="../../blog/">Blog</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="breadcrumbs">
+        <div class="breadcrumbs-container">
+            <a href="../../">Home</a>
+            <span class="separator">/</span>
+            <a href="../">Math</a>
+            <span class="separator">/</span>
+            <span class="current">Percentages</span>
+        </div>
+    </div>
+
+    <div class="navigation-ribbon">
+        <div class="navigation-ribbon-container">
+            <a href="../basic/"><i class="fas fa-plus-minus"></i>Basic Math</a>
+            <a href="./" class="active"><i class="fas fa-percent"></i>Percentages</a>
+            <a href="../fractions/"><i class="fas fa-divide"></i>Fractions</a>
+            <a href="../algebra/"><i class="fas fa-superscript"></i>Algebra</a>
+            <a href="../geometry/"><i class="fas fa-shapes"></i>Geometry</a>
+            <a href="../statistics/"><i class="fas fa-chart-bar"></i>Statistics</a>
+            <a href="../calculus/"><i class="fas fa-integral"></i>Calculus</a>
+            <a href="../scientific/"><i class="fas fa-calculator"></i>Scientific</a>
+        </div>
+    </div>
+
+    <main id="main-content" class="container py-5">
+        <section class="category-header">
+            <h1>Percentage Calculators</h1>
+            <p class="lead">Easily calculate percentages, percentage changes, markups, discounts, and more with our collection of free online percentage calculators. Understand the concepts behind the calculations with clear explanations.</p>
+        </section>
+
+        <section class="subcategory-section">
+            <h2>Available Percentage Calculators</h2>
+            <p>Tools to help you solve various percentage-related problems quickly and accurately.</p>
+            <div class="calculator-grid">
+                <a href="./percentage-calculator/" class="calculator-card">
+                    <div class="calculator-icon">
+                        <i class="fas fa-percent"></i>
+                    </div>
+                    <h3>Percentage Calculator</h3>
+                    <p>Calculate percentages of numbers, find what percentage one number is of another, and more.</p>
+                </a>
+                <!-- Add other percentage calculators here as cards -->
+                <!-- Example:
+                <a href="./percentage-change/" class="calculator-card">
+                    <div class="calculator-icon">
+                        <i class="fas fa-exchange-alt"></i>
+                    </div>
+                    <h3>Percentage Change</h3>
+                    <p>Calculate the percentage increase or decrease between two values.</p>
+                </a>
+                -->
+            </div>
+        </section>
+
+        <section class="math-education">
+            <h2>Understanding Percentages</h2>
+            <div class="education-content">
+                <p>Percentages are a fundamental concept in mathematics used to express a number as a fraction of 100. They are widely used in everyday life, from calculating discounts and tips to understanding statistics and financial reports. The word "percent" comes from the Latin "per centum," meaning "by the hundred."</p>
+
+                <h3>Key Percentage Concepts</h3>
+                <ul>
+                    <li><strong>Calculating a Percentage:</strong> To find what percentage one number (part) is of another number (whole), use the formula: (Part / Whole) * 100 = Percentage.</li>
+                    <li><strong>Finding a Percentage of a Number:</strong> To find a specific percentage of a number, convert the percentage to a decimal (divide by 100) and multiply by the number: (Percentage / 100) * Number = Result.</li>
+                    <li><strong>Percentage Change:</strong> To calculate the percentage increase or decrease between two values (old and new), use the formula: ((New Value - Old Value) / Old Value) * 100 = Percentage Change.</li>
+                    <li><strong>Discounts and Markups:</strong> Percentages are commonly used to calculate price adjustments. A discount reduces the price, while a markup increases it.</li>
+                </ul>
+
+                <h3>Tips for Working with Percentages</h3>
+                <ol>
+                    <li>Always identify the "whole" or the base amount when calculating percentages.</li>
+                    <li>Convert percentages to decimals or fractions before performing calculations.</li>
+                    <li>Double-check whether you are calculating a percentage of a number, the percentage itself, or the base number.</li>
+                    <li>Understand the context – a 10% increase followed by a 10% decrease does not return to the original value.</li>
+                </ol>
+
+                <p>Our percentage calculators simplify these calculations and provide clear results for various scenarios, helping you apply percentage concepts accurately.</p>
+            </div>
+        </section>
+
+        <!-- Removed FAQ section specific to the category page -->
+
+    </main>
+
+    <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>CalcHub</h3>
+                <p>Your source for free, accurate, and easy-to-use online calculators.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="../../about/">About Us</a></li>
+                    <li><a href="../../blog/">Blog</a></li>
+                    <li><a href="../../privacy/">Privacy Policy</a></li>
+                    <li><a href="../../terms/">Terms of Service</a></li>
+                    <li><a href="../../gdpr/">GDPR</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="../../finance/">Finance</a></li>
+                    <li><a href="../../math/">Math</a></li>
+                    <li><a href="../../health/">Health</a></li>
+                    <li><a href="../../conversions/">Conversions</a></li>
+                    <li><a href="../../date-time/">Date & Time</a></li>
+                    <li><a href="../../business/">Business</a></li>
+                    <li><a href="../../lifestyle/">Lifestyle</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <!-- Add social media links here if desired -->
+                <p>Stay connected for updates and new calculators.</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 CalcHub. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="/js/main.js"></script>
+    <script src="/js/dark-mode.js"></script>
+    <!-- No faq-accordion needed on category page -->
+</body>
+</html>
+
 
