--- a/finance/index.html
+++ b/finance/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finance Calculators - CalcHub</title>
     <meta name="description" content="Free online finance calculators for mortgage, loan, investment, retirement, and budgeting. Get accurate results and educational insights for your financial decisions.">
-    <link rel="canonical" href="/finance/"> <!-- Assuming www.freecalchub.com is the domain, adjust if not -->
+    <link rel="canonical" href="/finance/">
     
     <!-- Global styles -->
     <link rel="stylesheet" href="/css/styles.css">
@@ -19,12 +19,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8PR7EB78N"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag("js", new Date());
-      gtag("config", "G-V8PR7EB78N");
+      gtag("config", "G-R1QHNSSWTC");
     </script>
     <!-- End Google Analytics -->
 
@@ -99,7 +99,7 @@
               "@type": "ListItem",
               "position": 3,
               "name": "Compound Interest Calculator",
-              "url": "/finance/investment/compound-interest/"
+              "url": "/finance/investment/compound-interest-calculator/"
             }
             // Add other relevant calculators if needed
           ]
@@ -174,8 +174,8 @@
     <div class="navigation-ribbon">
         <div class="navigation-ribbon-container">
             <a href="/finance/mortgage/"><i class="fas fa-home"></i>Mortgage</a>
-            <a href="/finance/loan/" class="active"><i class="fas fa-file-invoice-dollar"></i>Loan</a>
-            <a href="/finance/investment/"><i class="fas fa-chart-line"></i>Investment</a>
+            <a href="/finance/loan/"><i class="fas fa-file-invoice-dollar"></i>Loan</a>
+            <a href="/finance/investment/" class="active"><i class="fas fa-chart-line"></i>Investment</a>
             <a href="/finance/retirement/"><i class="fas fa-umbrella-beach"></i>Retirement</a>
             <a href="/finance/budgeting/"><i class="fas fa-wallet"></i>Budgeting</a>
             <a href="/finance/savings/"><i class="fas fa-piggy-bank"></i>Savings</a>
@@ -199,11 +199,6 @@
                     <h3>Mortgage Calculator</h3>
                     <p>Calculate monthly payments, interest, and amortization schedule for your mortgage.</p>
                 </a>
-                <a href="/finance/mortgage/affordability-calculator/" class="calculator-card">
-                    <div class="calculator-icon"><i class="fas fa-dollar-sign"></i></div>
-                    <h3>Affordability Calculator</h3>
-                    <p>Find out how much house you can afford based on your income and expenses.</p>
-                </a>
                 <!-- Add more mortgage calculators as needed -->
             </div>
             <div class="subcategory-cta">
@@ -221,13 +216,6 @@
                     <p>Estimate monthly payments, total interest, and amortization for various loan types.</p>
                 </a>
                 <!-- Add more loan calculators as they are developed -->
-                <!-- Example:
-                <a href="/finance/loan/auto-loan-calculator/" class="calculator-card">
-                    <div class="calculator-icon"><i class="fas fa-car"></i></div>
-                    <h3>Auto Loan Calculator</h3>
-                    <p>Calculate payments and costs specific to car loans.</p>
-                </a>
-                -->
             </div>
             <div class="subcategory-cta">
                 <a href="/finance/loan/" class="btn">View All Loan Calculators</a>
@@ -238,15 +226,10 @@
             <h2>Investment Calculators</h2>
             <p>Grow your wealth and plan for the future with these investment planning tools.</p>
             <div class="calculator-grid">
-                <a href="/finance/investment/compound-interest/" class="calculator-card">
-                    <div class="calculator-icon"><i class="fas fa-chart-line"></i></div>
+                <a href="/finance/investment/compound-interest-calculator/" class="calculator-card">
+                    <div class="calculator-icon"><i class="fas fa-seedling"></i></div>
                     <h3>Compound Interest Calculator</h3>
                     <p>See how your investments grow over time with the power of compound interest.</p>
-                </a>
-                <a href="/finance/investment/investment-return/" class="calculator-card">
-                    <div class="calculator-icon"><i class="fas fa-percentage"></i></div>
-                    <h3>Investment Return Calculator</h3>
-                    <p>Calculate the return on your investments and compare different scenarios.</p>
                 </a>
                 <!-- Add more investment calculators as needed -->
             </div>
@@ -263,11 +246,6 @@
                     <div class="calculator-icon"><i class="fas fa-umbrella-beach"></i></div>
                     <h3>Retirement Calculator</h3>
                     <p>Estimate how much you need to save for retirement and if you are on track.</p>
-                </a>
-                <a href="/finance/retirement/401k-calculator/" class="calculator-card">
-                    <div class="calculator-icon"><i class="fas fa-piggy-bank"></i></div>
-                    <h3>401(k) Calculator</h3>
-                    <p>Calculate the growth of your 401(k) retirement account over time.</p>
                 </a>
                 <!-- Add more retirement calculators as needed -->
             </div>
@@ -324,7 +302,6 @@
             </div>
             <div class="footer-column">
                 <h3>Follow Us</h3>
-                <!-- Add social media links here if desired -->
                 <p>Stay connected for updates and new calculators.</p>
             </div>
         </div>
@@ -336,6 +313,7 @@
     <!-- Global script (for dark mode, mobile menu) -->
     <script src="/js/main.js" defer></script>
     <script src="/js/dark-mode.js" defer></script>
+    <script src="/js/faq-accordion.js" defer></script>
 
 </body>
 </html>
