--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="/finance/mortgage/css/navigation-ribbon-fix.css">
     <link rel="stylesheet" href="/finance/mortgage/css/breadcrumb-styling-fix.css">
     <link rel="stylesheet" href="/finance/mortgage/css/page-container-fix.css">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-R1QHNSSWTC");
+    </script>
+    <!-- End Google Analytics -->
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
