--- a/health/index.html
+++ b/health/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8PR7EB78N"></script> <!-- Use correct GA ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag("js", new Date());
-      gtag("config", "G-V8PR7EB78N");
+      gtag("config", "G-R1QHNSSWTC");
     </script>
     <!-- End Google Analytics -->
 
