--- a/math/percentages/percentage-calculator/index.html
+++ b/math/percentages/percentage-calculator/index.html
@@ -20,6 +20,16 @@
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-R1QHNSSWTC");
+    </script>
+    <!-- End Google Analytics -->
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
