--- a/finance/loan/loan-calculator/index.html
+++ b/finance/loan/loan-calculator/index.html
@@ -371,8 +371,8 @@
                     </div>
                     
                     <div class="form-actions">
-                        <button type="submit" id="calculate-button" class="btn-primary">Calculate</button>
-                        <button type="reset" class="btn-secondary">Reset</button>
+                        <button type="submit" id="calculate-button" class="btn btn-primary">Calculate</button>
+                        <button type="reset" class="btn btn-secondary">Reset</button>
                     </div>
                 </form>
                 
