--- a/finance/loan/loan-calculator/index.html
+++ b/finance/loan/loan-calculator/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
     
     <!-- Specific calculator styles -->
-    <link rel="stylesheet" href="./css/loan-calculator.css">
+    <link rel="stylesheet" href="/css/loan-calculator.css">
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -644,7 +644,7 @@
     <!-- Chart.js for visualizations -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Specific calculator script -->
-    <script src="./js/loan-calculator.js" defer></script>
+    <script src="/js/loan-calculator.js" defer></script>
 
 </body>
 </html>
