--- a/finance/index.html
+++ b/finance/index.html
@@ -89,12 +89,18 @@
             {
               "@type": "ListItem",
               "position": 3,
+              "name": "Mortgage Refinance Calculator",
+              "url": "https://www.calchub.com/finance/mortgage/refinance-calculator/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 4,
               "name": "Loan Calculator",
               "url": "https://www.calchub.com/finance/loan/loan-calculator/"
             },
             {
               "@type": "ListItem",
-              "position": 4,
+              "position": 5,
               "name": "Compound Interest Calculator",
               "url": "https://www.calchub.com/finance/investment/compound-interest-calculator/"
             }
@@ -165,6 +171,7 @@
                     <ul class="calculator-links">
                         <li><a href="/finance/mortgage/mortgage-calculator/">Mortgage Payment Calculator</a></li>
                         <li><a href="/finance/mortgage/affordability-calculator/">Mortgage Affordability Calculator</a></li>
+                        <li><a href="/finance/mortgage/refinance-calculator/">Mortgage Refinance Calculator</a></li>
                         <!-- Add more mortgage calculators here -->
                     </ul>
                 </div>
@@ -237,10 +244,12 @@
                         <li><a href="/math/">Math</a></li>
                         <li><a href="/health/">Health</a></li>
                         <li><a href="/conversions/">Conversions</a></li>
+                        <li><a href="/date-time/">Date & Time</a></li>
+                        <li><a href="/more/">More</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Support</h3>
+                    <h3>Company</h3>
                     <ul>
                         <li><a href="/about/">About Us</a></li>
                         <li><a href="/contact/">Contact</a></li>
@@ -248,9 +257,13 @@
                         <li><a href="/terms/">Terms of Service</a></li>
                     </ul>
                 </div>
+                <div class="footer-column">
+                    <h3>Connect</h3>
+                    <p>Follow us on social media for updates and new calculators.</p>
+                </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CalcHub. All rights reserved.</p>
+                <p>&copy; <span id="currentYear"></span> CalcHub. All rights reserved.</p>
             </div>
         </div>
     </footer>
