--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -11,8 +11,8 @@
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-R1QHNSSWTC');
+        gtag("js", new Date());
+        gtag("config", "G-R1QHNSSWTC");
     </script>
     <script type="application/ld+json">
     {
@@ -81,8 +81,21 @@
                 "priceCurrency": "USD"
               },
               "description": "Determine how much house you can afford based on your income and expenses."
+            },
+            {
+              "@type": "SoftwareApplication",
+              "name": "Mortgage Refinance Calculator",
+              "url": "https://www.calchub.com/finance/mortgage/refinance-calculator/",
+              "applicationCategory": "FinanceApplication",
+              "operatingSystem": "Web",
+              "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "USD"
+              },
+              "description": "Analyze if refinancing your current mortgage can save you money or meet other financial goals."
+              // Add other mortgage calculators here as they are created
             }
-            // Add other mortgage calculators here as they are created
           ]
         }
       ]
@@ -155,12 +168,19 @@
                         <p class="calculator-summary">Determine how much house you can realistically afford based on your income, debts, down payment, and desired loan terms.</p>
                     </a>
                 </div>
+                <div class="calculator-card">
+                    <a href="/finance/mortgage/refinance-calculator/">
+                        <h3 class="calculator-title">Mortgage Refinance Calculator</h3>
+                        <p class="calculator-summary">Analyze if refinancing your current mortgage can save you money or meet other financial goals.</p>
+                    </a>
+                </div>
+                </div>
                 <!-- Add more mortgage calculator cards here as they are developed -->
                 <!-- Example for a future calculator:
                 <div class="calculator-card">
-                    <a href="/finance/mortgage/refinance-calculator/">
-                        <h3 class="calculator-title">Refinance Calculator</h3>
-                        <p class="calculator-summary">Analyze if refinancing your current mortgage can save you money or meet other financial goals.</p>
+                    <a href="/finance/mortgage/payoff-calculator/">
+                        <h3 class="calculator-title">Payoff Calculator</h3>
+                        <p class="calculator-summary">See how extra payments can shorten your loan term and save thousands in interest..</p>
                     </a>
                 </div>
                 -->
@@ -200,10 +220,12 @@
                         <li><a href="/math/">Math</a></li>
                         <li><a href="/health/">Health</a></li>
                         <li><a href="/conversions/">Conversions</a></li>
+                        <li><a href="/date-time/">Date & Time</a></li>
+                        <li><a href="/more/">More</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Support</h3>
+                    <h3>Company</h3>
                     <ul>
                         <li><a href="/about/">About Us</a></li>
                         <li><a href="/contact/">Contact</a></li>
@@ -211,9 +233,13 @@
                         <li><a href="/terms/">Terms of Service</a></li>
                     </ul>
                 </div>
+                <div class="footer-column">
+                    <h3>Connect</h3>
+                    <p>Follow us on social media for updates and new calculators.</p>
+                </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CalcHub. All rights reserved.</p>
+                <p>&copy; <span id="currentYear"></span> CalcHub. All rights reserved.</p>
             </div>
         </div>
     </footer>
