--- a/finance/mortgage/refinance-calculator/index.html
+++ b/finance/mortgage/refinance-calculator/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Use our free Mortgage Refinance Calculator to see if refinancing your home loan makes sense. Compare rates, calculate savings, and find your break-even point instantly.">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
+    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <link rel="stylesheet" href="/css/navigation-ribbon.css">
     <link rel="stylesheet" href="./css/refinance-calculator.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
@@ -247,6 +249,19 @@
             </ol>
         </div>
     </nav>
+
+    <div class="navigation-ribbon">
+        <div class="navigation-ribbon-container">
+            <a href="/finance/mortgage/" class="active"><i class="fas fa-home"></i>Mortgage</a>
+            <a href="/finance/loan/"><i class="fas fa-file-invoice-dollar"></i>Loan</a>
+            <a href="/finance/investment/"><i class="fas fa-chart-line"></i>Investment</a>
+            <a href="/finance/retirement/"><i class="fas fa-umbrella-beach"></i>Retirement</a>
+            <a href="/finance/budgeting/"><i class="fas fa-wallet"></i>Budgeting</a>
+            <a href="/finance/savings/"><i class="fas fa-piggy-bank"></i>Savings</a>
+            <a href="/finance/cryptocurrency/"><i class="fas fa-coins"></i>Cryptocurrency</a>
+            <a href="/finance/tax/"><i class="fas fa-receipt"></i>Tax</a>
+        </div>
+    </div>
 
     <main class="container page-container">
         <article class="calculator-page-content">
@@ -602,5 +617,9 @@
     <script src="/js/faq-accordion.js"></script>
     <script src="/js/dark-mode.js"></script>
     <script src="./js/refinance-calculator.js"></script> 
+</body>
+</html>
+    <script src="/js/main.js" defer></script>
+    <script src="/js/dark-mode.js" defer></script>
 </body>
 </html>
