--- a/finance/mortgage/affordability-calculator/index.html
+++ b/finance/mortgage/affordability-calculator/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortgage Affordability Calculator: How Much House Can You Afford? | CalcHub</title>
     <meta name="description" content="Use our free Mortgage Affordability Calculator to determine how much house you can afford based on your income, debt, down payment, and credit score. Get personalized results instantly.">
+    <!-- Global styles -->
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
-    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <!-- Dark mode styles -->
+    <link rel="stylesheet" href="/css/dark-mode.css">
+    <!-- Dark mode button styles -->
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
+    <!-- Missing Global CSS -->
     <link rel="stylesheet" href="/css/navigation-ribbon.css">
+    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
+    <!-- Specific mortgage calculator styles -->
     <link rel="stylesheet" href="/finance/mortgage/affordability-calculator/css/mortgage-affordability-calculator.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
